# GreyBoxDRC_JUCE

./: README.md
Code/: CMakeLists.txt
Code/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Code/Source/Compressor/: CompModel.cpp  CompModel.h  GainSmooth.cpp  GainSmooth.h  MakeUp.cpp  MakeUp.h  StaticComp.cpp  StaticComp.h
Code/Source/Models/: dsp_params.json  hcmlp_weights.json  weights.json
